# Exam-Programmazione1

./: .gitignore  CMakeLists.txt  main.c
Model/: structures.h
Repository/: pointOfInterestBinaryFileRepository.c  pointOfInterestBinaryFileRepository.h  pointOfInterestTextFileRepository.c  pointOfInterestTextFileRepository.h
Resources/: stringStatic.h
Routines/: applicationSteps.c  applicationSteps.h  crudHelper.c  crudHelper.h  searchHelper.c  searchHelper.h  sortHelper.c  sortHelper.h
Utils/DynamicArray/: dynamicArray.c  dynamicArray.h
Utils/UI/: userInterfaceUtils.c  userInterfaceUtils.h
